--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     runtime-versions:
       python: 3.x
-      nodejs: 14.x
+      nodejs: 16
     commands:
       - echo "Installing AWS CLI..."
       - pip install awscli
